tests/snapshots/reads__small_evm_all_relations.snap
---
source: tests/reads.rs
expression: snapshot.trim_end()
---
## json
response 24550597..24550604 n=8 read_through=24550612
read blocks blocks=-..- cols=[hash,number,timestamp] block_column=number at=8:185da3e01d77dfc0 -> rows=8
read blocks blocks=0..- cols=[number] block_column=number required=[hash,number,timestamp] positions -> rows=224
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] block_column=block_number at=4491:3f9c23f4a4ecad7f -> rows=4491
read logs blocks=0..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[] positions cached window=0..24550612 -> rows=9764
read logs blocks=24550597..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=9764
read logs blocks=24550597..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=9764
read logs blocks=24550597..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=9764
read statediffs blocks=-..- cols=[address,block_number,key,kind,next,next_size,prev,prev_size,transaction_index] block_column=block_number at=14485:b6d624b29e867d92 -> rows=14485
read statediffs blocks=0..24550612 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] items=[] positions cached window=0..24550612 -> rows=33310
read statediffs blocks=24550597..24550612 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=22561
read statediffs blocks=24550597..24550612 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=33310
read traces blocks=-..- cols=[block_number,call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] block_column=block_number at=16746:f862d9cbb9ebb88a -> rows=16746
read traces blocks=0..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] items=[] positions cached window=0..24550612 -> rows=35220
read traces blocks=24550597..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=31508
read traces blocks=24550597..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=35220
read traces blocks=24550597..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=35220
read transactions blocks=-..- cols=[block_number,from,hash,input,input_size,to,transaction_index,value] block_column=block_number at=2179:a75ebf1a119ff550 -> rows=2179
read transactions blocks=0..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] items=[] positions cached window=0..24550612 -> rows=5138
read transactions blocks=24550597..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=2489
read transactions blocks=24550597..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=5138
read transactions blocks=24550597..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=5138

## json, page 256 KiB
response 24550597..24550597 n=1 read_through=24550612
read blocks blocks=-..- cols=[hash,number,timestamp] block_column=number at=1:c77b3abb6f87acd9 -> rows=1
read blocks blocks=0..- cols=[number] block_column=number required=[hash,number,timestamp] positions -> rows=224
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] block_column=block_number at=800:75fee8b59480eb8d -> rows=800
read logs blocks=0..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[] positions cached window=0..24550612 -> rows=9764
read logs blocks=24550597..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=9764
read logs blocks=24550597..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=9764
read logs blocks=24550597..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=9764
read statediffs blocks=-..- cols=[address,block_number,key,kind,next,next_size,prev,prev_size,transaction_index] block_column=block_number at=1904:ccffd22c26f9f8b8 -> rows=1904
read statediffs blocks=0..24550612 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] items=[] positions cached window=0..24550612 -> rows=33310
read statediffs blocks=24550597..24550612 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=22561
read statediffs blocks=24550597..24550612 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=33310
read traces blocks=-..- cols=[block_number,call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] block_column=block_number at=2277:72a2aa4843620051 -> rows=2277
read traces blocks=0..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] items=[] positions cached window=0..24550612 -> rows=35220
read traces blocks=24550597..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=31508
read traces blocks=24550597..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=35220
read traces blocks=24550597..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=35220
read transactions blocks=-..- cols=[block_number,from,hash,input,input_size,to,transaction_index,value] block_column=block_number at=270:b2a73cea32f4c44e -> rows=270
read transactions blocks=0..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] items=[] positions cached window=0..24550612 -> rows=5138
read transactions blocks=24550597..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=2489
read transactions blocks=24550597..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=5138
read transactions blocks=24550597..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=5138

## arrow
response 24550597..24550604 n=8
read blocks blocks=-..- cols=[hash,number,timestamp] block_column=number at=8:185da3e01d77dfc0 -> rows=8
read blocks blocks=0..- cols=[number] block_column=number required=[hash,number,timestamp] positions -> rows=224
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] block_column=block_number at=4491:3f9c23f4a4ecad7f -> rows=4491
read logs blocks=0..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[] positions cached window=0..24550612 -> rows=9764
read logs blocks=24550597..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=9764
read logs blocks=24550597..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=9764
read logs blocks=24550597..24550612 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=9764
read statediffs blocks=-..- cols=[address,block_number,key,kind,next,next_size,prev,prev_size,transaction_index] block_column=block_number at=14485:b6d624b29e867d92 -> rows=14485
read statediffs blocks=0..24550612 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] items=[] positions cached window=0..24550612 -> rows=33310
read statediffs blocks=24550597..24550612 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=22561
read statediffs blocks=24550597..24550612 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=33310
read traces blocks=-..- cols=[block_number,call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] block_column=block_number at=16746:f862d9cbb9ebb88a -> rows=16746
read traces blocks=0..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] items=[] positions cached window=0..24550612 -> rows=35220
read traces blocks=24550597..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=31508
read traces blocks=24550597..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=35220
read traces blocks=24550597..24550612 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=35220
read transactions blocks=-..- cols=[block_number,from,hash,input,input_size,to,transaction_index,value] block_column=block_number at=2179:a75ebf1a119ff550 -> rows=2179
read transactions blocks=0..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] items=[] positions cached window=0..24550612 -> rows=5138
read transactions blocks=24550597..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=2489
read transactions blocks=24550597..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=5138
read transactions blocks=24550597..24550612 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..24550612 -> rows=5138
